--- a/trunk/src/src/libResources/libResources.vcproj
+++ b/trunk/src/src/libResources/libResources.vcproj
@@ -195,6 +195,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MeshLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MeshLoader.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MeshManager.cpp"
 				>
 			</File>
