--- a/trunk/src/src/libCore/libCore.vcproj
+++ b/trunk/src/src/libCore/libCore.vcproj
@@ -3,7 +3,8 @@
 	ProjectType="Visual C++"
 	Version="8,00"
 	Name="libCore"
-	ProjectGUID="{829305BC-515F-4216-9CAF-5400783E03CB}"
+	ProjectGUID="{B9A5C794-B5B8-40D7-AAAC-01EF9EE4DC79}"
+	RootNamespace="libCore"
 	>
 	<Platforms>
 		<Platform
@@ -18,6 +19,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
+			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -36,8 +38,15 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)src&quot;"
+				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)src&quot;;&quot;$(SolutionDir)include&quot;"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -74,6 +83,8 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
+			CharacterSet="2"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -92,7 +103,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)src&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)src&quot;;&quot;$(SolutionDir)include&quot;"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE"
+				RuntimeLibrary="2"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -129,14 +145,6 @@
 	</References>
 	<Files>
 		<Filter
-			Name="Singleton"
-			>
-			<File
-				RelativePath=".\Singleton\Singleton.h"
-				>
-			</File>
-		</Filter>
-		<Filter
 			Name="Time"
 			>
 			<File
@@ -145,6 +153,26 @@
 			</File>
 			<File
 				RelativePath=".\Time\Time.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Singleton"
+			>
+			<File
+				RelativePath=".\Singleton\Singleton.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Inputs"
+			>
+			<File
+				RelativePath=".\Inputs\InputManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Inputs\InputManager.h"
 				>
 			</File>
 		</Filter>
@@ -179,18 +207,6 @@
 					>
 				</File>
 			</Filter>
-		</Filter>
-		<Filter
-			Name="Inputs"
-			>
-			<File
-				RelativePath=".\Inputs\InputManager.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Inputs\InputManager.h"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
