--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -174,6 +174,14 @@
 			Name="Levels"
 			>
 			<File
+				RelativePath=".\Levels\LevelStart.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Levels\LevelStart.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Levels\NewLevel.cpp"
 				>
 			</File>
