--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -438,6 +438,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\data\shader\default_skinning.fx"
+					>
+				</File>
+				<File
 					RelativePath=".\Resources\Shader.cpp"
 					>
 				</File>
