--- a/src/src/Test/Test.vcproj
+++ b/src/src/Test/Test.vcproj
@@ -133,6 +133,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/NODEFAULTLIB:libcmt&#x0D;&#x0A;/NODEFAULTLIB:libcmtd"
 				AdditionalDependencies="Engine.lib d3dx9.lib d3d9.lib Winmm.lib tinyxml.lib"
 				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\release&quot;"
 				GenerateDebugInformation="true"
